compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_aliased_const.snap
---
source: compiler-core/src/language_server/tests/reference.rs
assertion_line: 549
expression: "\npub const wibble = 123\n\npub fn main() {\n  wibble\n}\n"
snapshot_kind: text
---
-- mod.gleam

import app.{wibble as other}
            ▔▔▔▔▔▔          

fn wobble() {
  other
  ▔▔▔▔▔
}


-- app.gleam

pub const wibble = 123
          ▔▔▔▔▔▔      

pub fn main() {
  wibble
  ↑▔▔▔▔▔
}
