compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_aliased_function.snap
---
source: compiler-core/src/language_server/tests/reference.rs
assertion_line: 573
expression: "\npub fn wibble() {\n  123\n}\n\npub fn main() {\n  wibble()\n}\n"
snapshot_kind: text
---
-- mod.gleam

import app.{wibble as other}
            ▔▔▔▔▔▔          

fn wobble() {
  other()
  ▔▔▔▔▔  
}


-- app.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  123
}

pub fn main() {
  wibble()
  ↑▔▔▔▔▔  
}
