compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_aliased_type.snap
---
source: compiler-core/src/language_server/tests/reference.rs
expression: "\npub type Wibble { Wibble }\n\npub fn main() -> Wibble {\n  todo\n}\n"
---
-- mod.gleam

import app.{type Wibble as Wobble}
                 ▔▔▔▔▔▔           

fn wobble() -> Wobble {
               ▔▔▔▔▔▔  
  todo
}

fn other(w: app.Wibble) {
                ▔▔▔▔▔▔   
  todo
}


-- app.gleam

pub type Wibble { Wibble }
         ▔▔▔▔▔▔           

pub fn main() -> Wibble {
                 ↑▔▔▔▔▔  
  todo
}
