compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_constant_from_qualified_reference.snap
---
source: compiler-core/src/language_server/tests/reference.rs
expression: "\nimport mod\n\npub fn main() {\n  let value = mod.wibble\n  mod.wibble + value\n}\n"
---
-- mod.gleam

pub const wibble = 10
          ▔▔▔▔▔▔     

fn wobble() {
  wibble
  ▔▔▔▔▔▔
}


-- app.gleam

import mod

pub fn main() {
  let value = mod.wibble
                  ↑▔▔▔▔▔
  mod.wibble + value
      ▔▔▔▔▔▔        
}
