compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_public_function.snap
---
source: compiler-core/src/language_server/tests/reference.rs
expression: "\npub fn wibble() {\n  wibble()\n}\n"
---
-- mod.gleam

import app.{wibble}
            ▔▔▔▔▔▔ 

fn wobble() {
  app.wibble()
      ▔▔▔▔▔▔  
}

fn other() {
  wibble()
  ▔▔▔▔▔▔  
}


-- app.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  wibble()
  ↑▔▔▔▔▔  
}
