compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__reference__references_for_type_variant_from_qualified_reference.snap
---
source: compiler-core/src/language_server/tests/reference.rs
expression: "\nimport mod\n\npub fn main() {\n  let value = mod.Wibble\n  mod.Wibble\n  value\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }
                  ▔▔▔▔▔▔  

fn wobble() {
  Wibble
  ▔▔▔▔▔▔
}


-- app.gleam

import mod

pub fn main() {
  let value = mod.Wibble
                  ↑▔▔▔▔▔
  mod.Wibble
      ▔▔▔▔▔▔
  value
}
